--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,7 +46,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: https://eureka-server-relatospapelv11-production.up.railway.app/eureka/
     register-with-eureka: true
     fetch-registry: true
   instance:
